deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mms-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mms-service
  template:
    metadata:
      labels:
        app: mms-service
    spec:
      containers:
        - name: mms-service-container
          image: viswadockv1/myrepository:mmsv1 # Pulls from Docker Hub
          ports:
            - containerPort: 9090
