ingress-file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mms-ingress
  annotations:
    # Use the specific class for your controller (e.g., "nginx")
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mms-service
                port:
                  number: 9090
